Remove diagnosis parameters
